Various CSS adjustment to align the components in the application, fix transparency issue in the filter sidebar,

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -64,7 +64,7 @@ a {
 
   box-sizing : border-box;
   height : 43px;
-  padding : 0 15px;
+  padding : 0 10px; 
 
   cursor : pointer;
   transform : translateZ(0);
@@ -105,7 +105,7 @@ a {
   width: calc(100% - 10px *2);
   height : 300px;
   margin-left : 10px;
-  min-width: 860px;
+  min-width: 880px;  /* 900 - 10 for margin */
 }
 
 .appointment-image,
@@ -160,13 +160,17 @@ a {
 }
 
 /* MICHEALS HEADER */
+.m-header-row {
+  height : 410px;
+  min-width: 900px;
+}
 
 .m-header {
   display : inline-block;
   overflow : hidden;
   width: calc(100%/2 - 20px);
   height : 400px;
-  margin: 10px;
+  margin: 0 10px 0 10px;
   transform : translateZ(0);
 
   background-image : url(../assets/instoreclass.jpg);
@@ -256,7 +260,7 @@ a {
 
 /* MICHEALS PARTY */
 .m-party-row {
-  height : 520px;
+  height : 460px;
   min-width: 900px;
 }
 
@@ -266,7 +270,7 @@ a {
   margin: 10px;
 
   width : calc(100%/3 - 10px * 2);
-  height : 520px;
+  height : 440px;
 
   transition : 0.25s ease all 0.25s, 0.25s ease width, 0.25s ease height;
   transform : translateZ(0);
@@ -284,7 +288,7 @@ a {
   width : 300px;
   height : 320px;
 
-  /* background-size : cover; */
+  background-size : cover;
 }
 
 .m-party-description {
@@ -296,7 +300,7 @@ a {
 
   width : 100%;
   height : 100%;
-  padding : 20px;
+  padding : 10px;
 
   transform : translateZ(0) translateY(216px);
 
@@ -309,9 +313,8 @@ a {
   font-weight : bold;
   overflow: pre-wrap;
   display : inline-block;
-  width: calc(100% - 40%);
+  width: calc(100% - 0%);
   line-height: 100%;
-  
 }
 
 .m-party-description .m-party-description-text {
@@ -319,7 +322,7 @@ a {
   line-height : 16px;
 
   position : absolute;
-  top : 112px;
+  top : 72px;
   left : 0;
 
   display : block;
@@ -327,7 +330,7 @@ a {
 
   width : calc(100% - 40px);
   height : 145px;
-  margin : 0 20px;
+  margin : 0 10px;
 
   transform : translate3d(0,0,0);
   white-space : pre-wrap;
@@ -335,6 +338,7 @@ a {
 
   opacity : 1;
 }
+
 /* MICHEALS SERVICE */
 
 .m-service-row {
@@ -347,7 +351,8 @@ a {
   overflow : hidden;
   margin: 10px;
 
-  width : calc(100%/3 - 10px * 2);
+  width : calc(100%/3 - 20px);
+  /* width : calc(100%/3 - 10px); */
   height : 300px;
 
   transition : 0.25s ease all 0.25s, 0.25s ease width, 0.25s ease height;
@@ -439,7 +444,8 @@ a {
 
   width : 100%;
   height : 100%;
-  padding : 20px;
+  /* padding : 20px; */
+  padding : 10px; 
 
   transform : translateZ(0) translateY(216px);
 
@@ -452,9 +458,8 @@ a {
   font-weight : bold;
   overflow: pre-wrap;
   display : inline-block;
-  width: calc(100% - 40%);
+  width: calc(100% - 44%);
   line-height: 100%;
-  
 }
 
 .m-service-description .m-service-description-text {
@@ -462,15 +467,17 @@ a {
   line-height : 16px;
 
   position : absolute;
-  top : 82px;
+  top : 84px;
   left : 0;
 
   display : block;
-  overflow : pre-wrap;
+  /* overflow : pre-wrap; */
+  overflow : auto;
 
-  width : calc(100% - 40px);
+
+  /* width : calc(100% - 40px); */
   height : 145px;
-  margin : 0 20px;
+  margin : 0 10px;
 
   transform : translate3d(0,0,0);
   white-space : pre-wrap;
@@ -492,13 +499,13 @@ a {
 .m-service-description .m-button.m-button-more-info {
   position : absolute;
   top : 20px;
-  right : 20px;
+  right : 10px;
 }
 
 .m-service-description .m-button.m-button-times {
   position : absolute;
   right : 20px;
-  bottom : 20px;
+  bottom : 10px;
 }
 
 .m-service.mod-details .m-button.m-button-more-info {
@@ -533,6 +540,7 @@ a {
   height : 100%;
   margin : 0;
   padding : 20px;
+  background-color: #e9e9e9;
 }
 
 @media( min-width: 1540px ) {
@@ -1328,7 +1336,7 @@ a {
 
 .m-appointments-shrink {
   position : relative;
-  width : 70%;
+  width : calc(100% - 420px);
   margin-top : 0px;
 }
 
